fixed background and word-wrap in card modal

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -94,8 +94,15 @@ body {
 }
 
 .qb-preview {
-    border: solid 1px @brand-border;
-    padding: 0px 5px;
+    border: solid 1px #dcdcdc;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 3px;
+    white-space: pre-wrap; /* CSS3 */
+    white-space: -moz-pre-wrap; /* Mozilla, post millennium */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 .qb-sidenav {
